--- a/templates/default/edit.html
+++ b/templates/default/edit.html
@@ -51,7 +51,7 @@
             {% endif %}
         </div>
         {% endif %}
-        <form class="{{ form_data and form_data.error ? 'was-validated' : 'needs-validation' }}" method="post" action="index.php?page=add_record&id={{ zone_id }}" novalidate>
+        <form class="{{ form_data and form_data.error ? 'was-validated' : 'needs-validation' }}" method="post" action="index.php?page=edit&id={{ zone_id }}" novalidate>
             <input type="hidden" name="_token" value="{{ csrf_token }}">
             <input type="hidden" name="domain" value="{{ zone_id }}">
             <input type="hidden" name="form_token" value="{{ form_token }}">
@@ -480,7 +480,7 @@
             {% endif %}
         </div>
         {% endif %}
-        <form class="{{ form_data and form_data.error ? 'was-validated' : 'needs-validation' }}" method="post" action="index.php?page=add_record&id={{ zone_id }}" novalidate>
+        <form class="{{ form_data and form_data.error ? 'was-validated' : 'needs-validation' }}" method="post" action="index.php?page=edit&id={{ zone_id }}" novalidate>
             <input type="hidden" name="_token" value="{{ csrf_token }}">
             <input type="hidden" name="domain" value="{{ zone_id }}">
             <input type="hidden" name="form_token" value="{{ form_token }}">
